# attendance-clicker

./: .gitignore  CODEOWNERS  README.md
Backend/: DOCS.md  api-request-URIs.md  compose.yaml  makefile  notes.txt
Backend/interface/: Cargo.toml  Dockerfile
Backend/interface/src/: api.rs  api_funcs.rs  exdb.json  handler.rs  main.rs  schema.rs
Backend/interface/src/api/: GET.rs  POST.rs  classes_table.rs  levels_table.rs  manage.rs  query_consts.rs  questions_table.rs  users_table.rs
Backend/interface/src/api_funcs/: POST.rs
Client/: README.md  frontend.txt  package-lock.json  package.json  test.txt
Client/attendance-clicker/: README.md  package-lock.json  package.json
Client/attendance-clicker/src/app/: StoreProvider.tsx
Client/attendance-clicker/src/app/lib/: hooks.ts  store.ts
Client/bulma_project/: README.md  package-lock.json  package.json
Client/bulma_project/src/app/: LoginPage.module.css  fontAwesome.ts  globals.css  layout.tsx  page.module.css  page.tsx
Client/bulma_project/src/app/CheckedIn/: CheckedIn.module.css  page.tsx
Client/bulma_project/src/app/makePages/: page.tsx
Client/bulma_project/src/app/pages/: _app.tsx
Client/bulma_project/src/app/profiles/: page.tsx
Client/bulma_project/src/app/questions/: page.tsx
Client/bulma_project/src/app/studentgrade/: page.module.css  page.tsx
Client/bulma_project/src/lib/: store.ts
Client/bulma_project/src/lib/features/profile/: profileSlice.ts
