[package]
name = "interface"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
axum = { version = "0.7.7", features = ["tokio", "http1"] }

# things from tutorial
dotenv = "0.15.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.8.2", features = ["runtime-async-std-rustls", "postgres", "chrono", "uuid"]}
# chrono = { version = "0.4.24", features = ["serde"] }
# tower-http = { version = "0.5.0", features = ["cors"] }
# uuid = { version = "1.3.0", features = ["serde", "v4"] }