[package]
name = "interface"
version = "0.0.6"
authors = ["Logan Meyers <theterrarian03@gmail.com>", "Athena", "Don"]
rust-version = "1.81"  # older versions may work
edition = "2021"
description = "The Backend for the SDC iClicker alternative project. Mangages Database and handles API requests."

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
axum = { version = "0.8.1", features = ["tokio", "http1"] }

# things from tutorial
dotenv = "0.15.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sqlx = { version = "0.8.2", features = ["runtime-async-std-rustls", "postgres", "chrono", "uuid", "derive"]}
chrono = { version = "0.4.40", features = ["serde"] }
tower-http = { version = "0.6.2", features = ["full"] }
uuid = { version = "1.15.1", features = ["serde", "v4"] }